Improved speech output.